# UCA

./: .pre-commit-config.yaml  Dockerfile  README.md  Rules_Engine_Notebook.ipynb  config.yaml  pyproject.toml  requirments.txt  test.py
.github/workflows/: ruff.yml
examples/: explaination.txt  rule_engine_notebook.ipynb  rules_engine_notebook.ipynb
src/: imt_component.py
src/communication/: config.py  message_consumer.py  message_consumer_unit_test.py  message_producer.py  message_producer_unit_test.py
src/database/cyber_infra/: config.py  cyber_infra_client.py  cyber_infra_entity.py  cyber_infra_unit_test.py  example.py
src/database/rules_engine/: Rules_Engine_Notebook.ipynb  __init__.py  api.py  config.py  config.yaml  example.py  rules_engine.py  rules_engine_client.py  rules_engine_entity.py  rules_engine_unit_test.py
src/kafka/: ckn_service.py  estimator_service.py  kafka_client.py  main.py  smart_scheduler.py
src/ml_hub/: ml_hub_caller.py  unit_test.py
src/model_commons/: model_card_generator.py
src/model_commons/hugging_face/: README.md  hugging.py  hugging_unit_test.py  test_file.txt
src/model_commons/ml_hub/: ml_hub_caller.py  ml_hub_caller_unit_test.py
src/model_commons/patra/: ai_model_wrapper.py  ai_model_wrapper_unit_test.py  model_card_wrapper.py  nfl_game_score.json  (+6 more)
src/patra/: ai_model_wrapper.py  model_card_wrapper.py  unit_test.py  validator.py
src/smart_scheduler/: model_inference_scheduler.py  model_inference_scheduler_unit_test.py  model_training_scheduler.py  model_training_scheduler_unit_test.py  smart_scheduler.py
